--- a/src/res/UI.fxml
+++ b/src/res/UI.fxml
@@ -14,8 +14,8 @@
     <Button id="" fx:id="CardOut" layoutX="344.0" layoutY="316.0" mnemonicParsing="false" onAction="#CardOutMethod" prefHeight="70.0" prefWidth="183.0" text="Take your card out of the ATM" />
     <Button fx:id="CardAccept" layoutX="61.0" layoutY="75.0" mnemonicParsing="false" onAction="#CardAcceptMethod" prefHeight="34.0" prefWidth="228.0" text="Insert your card nummber" />
     <Button id="" fx:id="MoneyToWith" layoutX="344.0" layoutY="224.0" mnemonicParsing="false" onAction="#MoneyToWithMethod" prefHeight="70.0" prefWidth="183.0" text="Withdraw" />
-    <TextField id="" fx:id="InsertAccNumber" layoutX="61.0" layoutY="34.0" prefHeight="34.0" prefWidth="228.0" promptText="Card insert" text="" />
-    <TextField id="" fx:id="InsertPinNumber" layoutX="344.0" prefHeight="34.0" prefWidth="228.0" promptText="Pin insert" AnchorPane.bottomAnchor="332.0" />
+    <TextField id="" fx:id="InsertAccNumber" layoutX="61.0" layoutY="34.0" onKeyPressed="#CardKeyPressedMethod" prefHeight="34.0" prefWidth="228.0" promptText="Card insert" text="" />
+    <TextField id="" fx:id="InsertPinNumber" layoutX="344.0" onKeyPressed="#PinKeyPressedMethod" prefHeight="34.0" prefWidth="228.0" promptText="Pin insert" AnchorPane.bottomAnchor="332.0" />
     <TextField id="" fx:id="AmmountMoneyToWid" layoutX="161.0" layoutY="248.0" prefHeight="34.0" prefWidth="128.0" promptText="Your ammount" />
     <RadioButton fx:id="ChoiceMoney" layoutX="14.0" layoutY="208.0" mnemonicParsing="false" text="Choice" />
     <RadioButton fx:id="FreeMoney" layoutX="100.0" layoutY="209.0" mnemonicParsing="false" text="Free" />
