--- a/src/res/Main.fxml
+++ b/src/res/Main.fxml
@@ -7,16 +7,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.Controller">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.MenuController">
   <children>
     <Button fx:id="PinAccept" layoutX="344.0" layoutY="75.0" mnemonicParsing="false" onAction="#PinAcceptMethod" prefHeight="34.0" prefWidth="228.0" text="Insert your pin nummber" />
     <Button fx:id="StateOfAccount" layoutX="196.0" layoutY="122.0" mnemonicParsing="false" onAction="#StateOfAccountMethod" prefHeight="54.0" prefWidth="228.0" text="Account Statement" />
     <Button id="" fx:id="CardOut" layoutX="344.0" layoutY="316.0" mnemonicParsing="false" onAction="#CardOutMethod" prefHeight="70.0" prefWidth="183.0" text="Take your card out of the ATM" />
     <Button fx:id="CardAccept" layoutX="61.0" layoutY="75.0" mnemonicParsing="false" onAction="#CardAcceptMethod" prefHeight="34.0" prefWidth="228.0" text="Insert your card nummber" />
     <Button id="" fx:id="MoneyToWith" layoutX="344.0" layoutY="224.0" mnemonicParsing="false" onAction="#MoneyToWithMethod" prefHeight="70.0" prefWidth="183.0" text="Withdraw" />
-    <TextField id="" fx:id="InsertAccNumber" layoutX="61.0" layoutY="34.0" onKeyPressed="#CardKeyPressedMethod" prefHeight="34.0" prefWidth="228.0" promptText="Card insert" text="" />
+    <TextField id="" fx:id="InsertAccNumber" depthTest="DISABLE" layoutX="61.0" layoutY="34.0" onKeyPressed="#CardKeyPressedMethod" prefHeight="34.0" prefWidth="228.0" promptText="Card insert" text="" />
+    <TextField id="" fx:id="AmmountMoneyToWid" layoutX="161.0" layoutY="248.0" prefHeight="34.0" prefWidth="128.0" promptText="Your ammount" text="" />
     <TextField id="" fx:id="InsertPinNumber" layoutX="344.0" onKeyPressed="#PinKeyPressedMethod" prefHeight="34.0" prefWidth="228.0" promptText="Pin insert" AnchorPane.bottomAnchor="332.0" />
-    <TextField id="" fx:id="AmmountMoneyToWid" layoutX="161.0" layoutY="248.0" prefHeight="34.0" prefWidth="128.0" promptText="Your ammount" />
     <RadioButton fx:id="ChoiceMoney" layoutX="14.0" layoutY="208.0" mnemonicParsing="false" text="Choice" />
     <RadioButton fx:id="FreeMoney" layoutX="100.0" layoutY="209.0" mnemonicParsing="false" text="Free" />
     <ComboBox id="" fx:id="ComboBox" disable="false" layoutX="14.0" layoutY="248.0" prefHeight="34.0" prefWidth="128.0">
