ok, started to work on menu app. had to rewrite the old main fxml file, already added some new files like alertdialog and account both of them work great

--- a/src/res/Account.fxml
+++ b/src/res/Account.fxml
@@ -8,14 +8,19 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.AccountController">
   <children>
-    <TextField id="AccountNumber" fx:id="AccountNumberField" layoutX="339.0" layoutY="105.0" onAction="#AccountNumberMethod" prefWidth="200.0" />
-    <TextField fx:id="OverdraftField" layoutX="339.0" layoutY="178.0" onAction="#OverdraftFieldMethod" prefWidth="200.0" />
-    <TextField fx:id="CashField" layoutX="339.0" layoutY="255.0" onAction="#CashFieldMethod" prefWidth="200.0" />
-    <Label id="AccountNumber" layoutX="140.0" layoutY="116.0" text="Account Number" underline="false" />
-    <Label layoutX="140.0" layoutY="181.0" text="Overdraft" />
-    <Label layoutX="140.0" layoutY="314.0" text="Pin (min. 4 numbers)" />
-    <Label layoutX="140.0" layoutY="250.0" text="Cash" />
-    <PasswordField id="PinFiled" fx:id="PinField" layoutX="339.0" layoutY="311.0" onAction="#PinFiledMethod" prefWidth="200.0" />
+    <TextField id="AccountNumber" fx:id="AccountNumberField" layoutX="140.0" layoutY="75.0" onAction="#AccountNumberMethod" prefWidth="200.0" />
+    <TextField fx:id="OverdraftField" layoutX="140.0" layoutY="141.0" onAction="#OverdraftFieldMethod" prefWidth="200.0" />
+    <TextField fx:id="CashField" layoutX="143.0" layoutY="210.0" onAction="#CashFieldMethod" prefWidth="200.0" />
+    <Label id="AccountNumber" layoutX="33.0" layoutY="78.0" text="Account Number" underline="false" />
+    <Label layoutX="33.0" layoutY="144.0" text="Overdraft" />
+    <Label layoutX="33.0" layoutY="277.0" text="Pin (min. 4 numbers)" />
+    <Label layoutX="33.0" layoutY="213.0" text="Cash" />
+    <PasswordField id="PinFiled" fx:id="PinField" layoutX="156.0" layoutY="277.0" onAction="#PinFieldMethod" prefWidth="130.0" />
     <Label layoutX="272.0" layoutY="37.0" text="Menu" />
+    <Button fx:id="ButtonAccountNumber" layoutX="356.0" layoutY="75.0" mnemonicParsing="false" onAction="#ButtonAccountNumberMethod" prefHeight="22.0" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonOverdraft" layoutX="356.0" layoutY="142.0" mnemonicParsing="false" onAction="#ButtonOverdraftMethod" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonCash" layoutX="356.0" layoutY="211.0" mnemonicParsing="false" onAction="#ButtonCashMethod" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonPin" layoutX="356.0" layoutY="278.0" mnemonicParsing="false" onAction="#ButtonPinMethod" prefWidth="200.0" text="Send" />
+    <TextArea fx:id="TextArea" editable="false" layoutX="33.0" layoutY="330.0" prefHeight="56.0" prefWidth="523.0" wrapText="false" />
   </children>
 </AnchorPane>
