--- a/src/res/Account.fxml
+++ b/src/res/Account.fxml
@@ -21,6 +21,7 @@
     <Button fx:id="ButtonOverdraft" layoutX="356.0" layoutY="142.0" mnemonicParsing="false" onAction="#ButtonOverdraftMethod" prefWidth="200.0" text="Send" />
     <Button fx:id="ButtonCash" layoutX="356.0" layoutY="211.0" mnemonicParsing="false" onAction="#ButtonCashMethod" prefWidth="200.0" text="Send" />
     <Button fx:id="ButtonPin" layoutX="356.0" layoutY="278.0" mnemonicParsing="false" onAction="#ButtonPinMethod" prefWidth="200.0" text="Send" />
-    <TextArea fx:id="TextArea" editable="false" layoutX="33.0" layoutY="330.0" prefHeight="56.0" prefWidth="523.0" wrapText="false" />
+    <TextArea fx:id="TextArea" editable="false" layoutX="33.0" layoutY="309.0" prefHeight="77.0" prefWidth="523.0" wrapText="false" />
+    <Button fx:id="printButton" layoutX="60.0" layoutY="25.0" mnemonicParsing="false" onAction="#printAllAccounts" prefHeight="37.0" prefWidth="157.0" text="Print all accounts" />
   </children>
 </AnchorPane>
