--- a/src/res/Account.fxml
+++ b/src/res/Account.fxml
@@ -2,26 +2,34 @@
 
 <?import java.lang.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.AccountController">
+<AnchorPane id="AnchorPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" prefHeight="372.0" prefWidth="555.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="application.AccountController">
   <children>
-    <TextField id="AccountNumber" fx:id="AccountNumberField" layoutX="140.0" layoutY="75.0" onAction="#AccountNumberMethod" prefWidth="200.0" />
-    <TextField fx:id="OverdraftField" layoutX="140.0" layoutY="141.0" onAction="#OverdraftFieldMethod" prefWidth="200.0" />
-    <TextField fx:id="CashField" layoutX="143.0" layoutY="210.0" onAction="#CashFieldMethod" prefWidth="200.0" />
-    <Label id="AccountNumber" layoutX="33.0" layoutY="78.0" text="Account Number" underline="false" />
-    <Label layoutX="33.0" layoutY="144.0" text="Overdraft" />
-    <Label layoutX="33.0" layoutY="277.0" text="Pin (min. 4 numbers)" />
-    <Label layoutX="33.0" layoutY="213.0" text="Cash" />
-    <PasswordField id="PinFiled" fx:id="PinField" layoutX="156.0" layoutY="277.0" onAction="#PinFieldMethod" prefWidth="130.0" />
-    <Button fx:id="ButtonAccountNumber" layoutX="356.0" layoutY="75.0" mnemonicParsing="false" onAction="#ButtonAccountNumberMethod" prefHeight="22.0" prefWidth="200.0" text="Send" />
-    <Button fx:id="ButtonOverdraft" layoutX="356.0" layoutY="142.0" mnemonicParsing="false" onAction="#ButtonOverdraftMethod" prefWidth="200.0" text="Send" />
-    <Button fx:id="ButtonCash" layoutX="356.0" layoutY="211.0" mnemonicParsing="false" onAction="#ButtonCashMethod" prefWidth="200.0" text="Send" />
-    <Button fx:id="ButtonPin" layoutX="356.0" layoutY="278.0" mnemonicParsing="false" onAction="#ButtonPinMethod" prefWidth="200.0" text="Send" />
-    <TextArea fx:id="TextArea" editable="false" layoutX="33.0" layoutY="309.0" prefHeight="77.0" prefWidth="523.0" wrapText="false" />
-    <Button fx:id="printButton" layoutX="60.0" layoutY="25.0" mnemonicParsing="false" onAction="#printAllAccounts" prefHeight="37.0" prefWidth="157.0" text="Print all accounts" />
-    <Button fx:id="saveAccount" layoutX="284.0" layoutY="26.0" mnemonicParsing="false" onAction="#Save" prefHeight="37.0" prefWidth="157.0" text="Save new account" />
+    <TextField id="AccountNumber" fx:id="AccountNumberField" layoutX="127.0" layoutY="75.0" onAction="#AccountNumberMethod" prefWidth="200.0" />
+    <TextField fx:id="OverdraftField" layoutX="127.0" layoutY="109.0" onAction="#OverdraftFieldMethod" prefWidth="197.0" />
+    <TextField fx:id="CashField" layoutX="127.0" layoutY="152.0" onAction="#CashFieldMethod" prefWidth="197.0" />
+    <Label id="AccountNumber" layoutX="20.0" layoutY="78.0" text="Account Number" underline="false" />
+    <Label layoutX="20.0" layoutY="118.0" text="Overdraft" />
+    <Label layoutX="20.0" layoutY="195.0" text="Pin (min. 4 numbers)" />
+    <Label layoutX="20.0" layoutY="155.0" text="Cash" />
+    <PasswordField id="PinFiled" fx:id="PinField" layoutX="194.0" layoutY="189.0" onAction="#PinFieldMethod" prefWidth="130.0" />
+    <Button fx:id="ButtonAccountNumber" layoutX="343.0" layoutY="75.0" mnemonicParsing="false" onAction="#ButtonAccountNumberMethod" prefHeight="22.0" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonOverdraft" layoutX="343.0" layoutY="110.0" mnemonicParsing="false" onAction="#ButtonOverdraftMethod" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonCash" layoutX="343.0" layoutY="153.0" mnemonicParsing="false" onAction="#ButtonCashMethod" prefWidth="200.0" text="Send" />
+    <Button fx:id="ButtonPin" layoutX="343.0" layoutY="189.0" mnemonicParsing="false" onAction="#ButtonPinMethod" prefWidth="200.0" text="Send" />
+    <TextArea fx:id="TextArea" editable="false" layoutX="19.0" layoutY="238.0" prefHeight="127.0" prefWidth="523.0" wrapText="false" />
+    <HBox fx:id="hbox" alignment="CENTER" fillHeight="true" layoutX="14.0" layoutY="11.0" prefHeight="51.0" prefWidth="542.0" spacing="60.0">
+      <children>
+        <Button fx:id="printButton" mnemonicParsing="false" onAction="#printAllAccounts" prefHeight="37.0" prefWidth="157.0" text="Print all accounts" />
+        <Button fx:id="saveAccount" mnemonicParsing="false" onAction="#Save" prefHeight="37.0" prefWidth="157.0" text="Save new account" />
+      </children>
+      <padding>
+        <Insets />
+      </padding>
+    </HBox>
   </children>
 </AnchorPane>
